--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="col-xl-9 mx-auto">
           <img class="logo logo--masthead" src="img/chivote-logo.png" alt="Chi.Vote">
           <h3 class="mb-5">
-            A one-stop-shop for the Chicago election -- no matter if you’re a rookie voter of a veteran, we’ll have
-            everything you need: from tools to find your ward or polling place, to breakdowns on candidates, links to
-            news, and more.
+            A one-stop-shop for the Chicago election -- no matter if you’re a rookie voter or a veteran, we’ll have
+            everything you need: tools to find your ward, breakdowns on candidates and races, links to
+            news and more.
           </h3>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -51,7 +51,7 @@
                 novalidate>
                 <!-- <label for="mce-EMAIL">Get Updates</label> -->
                 <p>
-                  Sign-up to be notified when we publish new content and features to Chi.Vote.
+                  Sign up to be notified when we publish new content and features to Chi.Vote.
                 </p>
                 <div id="mc_embed_signup_scroll" class="form-row">
                   <div class="col-12 col-md-9 mb-2 mb-md-0">
@@ -88,7 +88,7 @@
           Chicago by creating content and tools of the highest quality and accessibility around city elections.
 
           The founding partners of the Collective are The Better Government Association, Block Club Chicago, The Chicago
-          Reporter, The Daily Line, and The Triibe.
+          Reporter, The Daily Line and The Triibe.
         </p>
       </div>
       <div class="row collective-logos">
