--- a/index.html
+++ b/index.html
@@ -1,108 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<meta name="description" content="" />
+		<meta name="author" content="" />
 
-<head>
+		<title>Chi.vote – Coming soon!</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+		<!-- Bootstrap core CSS -->
+		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <title>Chi.Vote</title>
+		<!-- Custom fonts for this template -->
+		<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
+		<link
+			href="vendor/simple-line-icons/css/simple-line-icons.css"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
+			rel="stylesheet"
+			type="text/css"
+		/>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<!-- Custom styles for this template -->
+		<link href="css/landing-page.min.css" rel="stylesheet" />
+	</head>
 
-  <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
-    type="text/css">
-  <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+	<body>
+		<!-- Masthead -->
+		<header class="masthead text-white text-center">
+			<!-- <div class="overlay"></div> -->
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-9 mx-auto">
+						<img
+							class="logo logo--masthead"
+							src="img/chivote-logo.png"
+							alt="Chi.vote"
+						/>
+						<h3 class="mb-5 intro-blurb">
+							A one-stop-shop for the Chicago election.
+						</h3>
+						<h4 class="intro-blurb">
+							No matter if you’re a rookie voter of a veteran, we’ll have
+							everything you need: from tools to find your ward or polling
+							place, to breakdowns on candidates, links to news, and more.
+						</h4>
+					</div>
+					<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+						<!-- <form> -->
+						<div class="form-row">
+							<!-- Begin Mailchimp Signup Form -->
+							<div id="mc_embed_signup">
+								<form
+									action="https://bettergov.us7.list-manage.com/subscribe/post?u=41b3f3673000e91eee2aa89e7&amp;id=c88b648bc5"
+									method="post"
+									id="mc-embedded-subscribe-form"
+									name="mc-embedded-subscribe-form"
+									class="validate"
+									target="_blank"
+									novalidate
+								>
+									<!-- <label for="mce-EMAIL">Get Updates</label> -->
+									<p>
+										Sign-up to be notified when we publish new content and
+										features to Chi.vote.
+									</p>
+									<div id="mc_embed_signup_scroll" class="form-row">
+										<div class="col-12 col-md-9 mb-2 mb-md-0">
+											<input
+												class="form-control form-control-lg"
+												placeholder="Enter your email..."
+												type="email"
+												value=""
+												name="EMAIL"
+												id="mce-EMAIL"
+												required
+											/>
+										</div>
+										<div class="col-12 col-md-3">
+											<input
+												class="btn btn-block btn-lg btn-primary"
+												type="submit"
+												value="Sign up!"
+												name="subscribe"
+												id="mc-embedded-subscribe"
+											/>
+										</div>
+										<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+										<div
+											style="position: absolute; left: -5000px;"
+											aria-hidden="true"
+										>
+											<input
+												type="text"
+												name="b_41b3f3673000e91eee2aa89e7_c88b648bc5"
+												tabindex="-1"
+												value=""
+											/>
+										</div>
 
+										<!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
+									</div>
+								</form>
+							</div>
+							<!--End mc_embed_signup-->
+						</div>
+						<!-- </form> -->
+					</div>
+				</div>
+			</div>
+		</header>
 
-  <!-- Custom styles for this template -->
-  <link href="css/landing-page.min.css" rel="stylesheet">
+		<!-- Icons Grid -->
+		<section class="chivote-coll text-center">
+			<div class="container">
+				<div class="row text-center mb-5">
+					<img
+						class="logo logo--chivote-coll"
+						src="img/chivote-collective-logo-white.png"
+						alt="Chi.vote"
+					/>
+					<p>
+						The Chi.vote website is the core product of the Chi.vote Collective,
+						a new group of nonpartisan media and civic organizations that
+						believe in fostering a safer, more prosperous and more equitable and
+						connected Chicago by creating content and tools of the highest
+						quality and accessibility around city elections. The founding
+						partners of the Collective are the Better Government Association,
+						Block Club Chicago, The Chicago Reporter, The Daily Line, and The
+						Triibe.
+					</p>
+				</div>
+				<div class="row collective-logos">
+					<a href="https://bettergov.org">
+						<img
+							src="img/BGA-logo-white.png"
+							alt="Better Government Association"
+							class="collective-logo"
+						/>
+					</a>
+					<a href="https://blockclubchicago.org/">
+						<img
+							src="img/BCC-logo-white.png"
+							alt="Block Club Chicago"
+							class="collective-logo"
+						/>
+					</a>
+					<a href="https://www.chicagoreporter.com/">
+						<img
+							src="img/chicago_reporter.png"
+							alt="The Chicago Reporter"
+							class="collective-logo"
+						/>
+					</a>
+					<a href="http://thedailyline.net/">
+						<img
+							src="img/TDL-logo-white.png"
+							alt="The Daily Line"
+							class="collective-logo"
+						/>
+					</a>
+					<a href="https://thetriibe.com/">
+						<img
+							src="img/Triibe - transparent white logo.png"
+							alt="The TRiiBE"
+							class="collective-logo"
+						/>
+					</a>
+				</div>
+			</div>
+		</section>
 
-</head>
-
-<body>
-
-  <!-- Masthead -->
-  <header class="masthead text-white text-center">
-    <!-- <div class="overlay"></div> -->
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <img class="logo logo--masthead" src="img/chivote-logo.png" alt="Chi.Vote">
-          <h3 class="mb-5">
-            A one-stop-shop for the Chicago election -- no matter if you’re a rookie voter of a veteran, we’ll have
-            everything you need: from tools to find your ward or polling place, to breakdowns on candidates, links to
-            news, and more.
-          </h3>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <!-- <form> -->
-          <div class="form-row">
-            <!-- Begin Mailchimp Signup Form -->
-            <div id="mc_embed_signup">
-              <form action="https://bettergov.us7.list-manage.com/subscribe/post?u=41b3f3673000e91eee2aa89e7&amp;id=c88b648bc5"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-                novalidate>
-                <!-- <label for="mce-EMAIL">Get Updates</label> -->
-                <p>
-                  Sign-up to be notified when we publish new content and features to Chi.Vote.
-                </p>
-                <div id="mc_embed_signup_scroll" class="form-row">
-                  <div class="col-12 col-md-9 mb-2 mb-md-0">
-                    <input class="form-control form-control-lg" placeholder="Enter your email..." type="email" value=""
-                      name="EMAIL" id="mce-EMAIL" required>
-                  </div>
-                  <div class="col-12 col-md-3">
-                    <input class="btn btn-block btn-lg btn-primary" type="submit" value="Sign up!" name="subscribe"
-                      id="mc-embedded-subscribe">
-                  </div>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_41b3f3673000e91eee2aa89e7_c88b648bc5"
-                      tabindex="-1" value=""></div>
-                    <!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
-                </div>
-              </form>
-            </div>
-            <!--End mc_embed_signup-->
-          </div>
-          <!-- </form> -->
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Icons Grid -->
-  <section class="chivote-coll text-center">
-    <div class="container">
-      <div class="row text-center mb-5">
-        <img class="logo logo--chivote-coll" src="img/chivote-collective-logo-white.png" alt="Chi.Vote">
-        <p>
-          The Chi.vote website is the core product of the Chi.vote Collective, a new group of nonpartisan media and
-          civic organizations that believe in fostering a safer, more prosperous and more equitable and connected
-          Chicago by creating content and tools of the highest quality and accessibility around city elections.
-
-          The founding partners of the Collective are The Better Government Association, Block Club Chicago, The Chicago
-          Reporter, The Daily Line, and The Triibe.
-        </p>
-      </div>
-      <div class="row collective-logos">
-        <img src="img/BGA-logo-white.png" alt="Better Government Association" class="collective-logo">
-        <img src="img/BCC-logo-white.png" alt="Block Club Chicago" class="collective-logo">
-        <img src="img/chicago_reporter.png" alt="The Chicago Reporter" class="collective-logo">
-        <img src="img/TDL-logo-white.png" alt="The Daily Line" class="collective-logo">
-        <img src="img/Triibe - transparent white logo.png" alt="The TRiiBE" class="collective-logo">
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <!-- <footer class="footer bg-light">
+		<!-- Footer -->
+		<!-- <footer class="footer bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -148,10 +229,8 @@
     </div>
   </footer> -->
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
+		<!-- Bootstrap core JavaScript -->
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	</body>
 </html>
