Collective logo scales better on mobile, improves responsiveness of logos

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 		<!-- Icons Grid -->
 		<section class="chivote-coll text-center">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row text-center mb-5">
 					<img
 						class="logo logo--chivote-coll"
@@ -228,17 +228,8 @@
     </div>
   </footer> -->
 
-<<<<<<< HEAD
 		<!-- Bootstrap core JavaScript -->
 		<script src="vendor/jquery/jquery.min.js"></script>
 		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	</body>
-=======
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
->>>>>>> acf98895377e01e21e81098095f93d95c212bba6
 </html>
