Higher res for chivote logo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="col-xl-9 mx-auto">
 						<img
 							class="logo logo--masthead"
-							src="img/chivote-logo.png"
+							src="img/chivote-logo-7x.png"
 							alt="Chi.vote"
 						/>
 						<h3 class="mb-5 intro-blurb">
