--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</h3>
 						<h4 class="intro-blurb">
 							No matter if you’re a rookie voter or a veteran, we’ll have
-							everything you need: from tools to find your ward, breakdowns on candidates and races, links to news, and more.
+							everything you need: from tools to find your ward, breakdowns on candidates and races, links to news and more.
 						</h4>
 					</div>
 					<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
