--- a/index.html
+++ b/index.html
@@ -6,11 +6,48 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<meta name="description" content="" />
-		<meta name="author" content="" />
-
-		<title>Chi.vote – Coming soon!</title>
-
+		<meta name="author" content="Chi.vote" />
+		<meta property="og:type" content="website" />
+		<meta property="twitter:card" content="summary_large_image" />
+		<!-- Site URL -->
+		<meta property="og:url" content="https://chi.vote/" />
+		<link rel="canonical" href="https://chi.vote/" />
+		<!-- Site title -->
+		<meta
+			property="twitter:title"
+			content="Chi.vote – A one-stop-shop for the Chicago election, Feb. 26"
+		/>
+		<meta
+			property="og:title"
+			content="Chi.vote – A one-stop-shop for the Chicago election, Feb. 26"
+		/>
+		<title>Chi.vote – A one-stop-shop for the Chicago election, Feb. 26</title>
+		<!-- Site description -->
+		<meta
+			property="twitter:description"
+			content="Coming soon: A tool to find your ward, breakdowns on candidates and races, links to news and more"
+		/>
+		<meta
+			property="og:description"
+			content="Coming soon: A tool to find your ward, breakdowns on candidates and races, links to news and more"
+		/>
+		<meta
+			name="description"
+			content="Coming soon: A tool to find your ward, breakdowns on candidates and races, links to news and more"
+		/>
+		<!-- Share image -->
+		<meta
+			property="twitter:image"
+			content="https://chi.vote/img/chivote-social-card.jpg"
+		/>
+		<meta property="twitter:image:alt" content="Chi.vote logo" />
+		<meta
+			property="og:image"
+			content="https://chi.vote/img/chivote-social-card.jpg"
+		/>
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="1800" />
+		<meta property="og:image:height" content="900" />
 		<!-- Bootstrap core CSS -->
 		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -53,7 +90,8 @@
 						</h3>
 						<h4 class="intro-blurb">
 							No matter if you’re a rookie voter or a veteran, we’ll have
-							everything you need: tools to find your ward, breakdowns on candidates and races, links to news and more.
+							everything you need: tools to find your ward, breakdowns on
+							candidates and races, links to news and more.
 						</h4>
 					</div>
 					<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -180,53 +218,6 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- Footer -->
-		<!-- <footer class="footer bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-facebook fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer> -->
 
 		<!-- Bootstrap core JavaScript -->
 		<script src="vendor/jquery/jquery.min.js"></script>
