--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="1800" />
 		<meta property="og:image:height" content="900" />
+		<!-- Favicons -->
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 		<!-- Bootstrap core CSS -->
 		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
