update paths to work on gh-pages

--- a/index.html
+++ b/index.html
@@ -49,8 +49,18 @@
     <meta property="og:image:width" content="1800" />
     <meta property="og:image:height" content="900" />
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./favicon-16x16.png"
+      sizes="16x16"
+    />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -180,7 +190,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4">
-            <a class="feature-link" href="/faq/">
+            <a class="feature-link" href="./faq/">
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-question m-auto text-primary"></i>
@@ -193,7 +203,7 @@
             </a>
           </div>
           <div class="col-lg-4">
-            <a class="feature-link" href="/ask/">
+            <a class="feature-link" href="./ask/">
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-speech m-auto text-primary"></i>
@@ -206,7 +216,7 @@
             </a>
           </div>
           <div class="col-lg-4">
-            <a class="feature-link" href="/quiz/">
+            <a class="feature-link" href="./quiz/">
               <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-check m-auto text-primary"></i>
