--- a/quiz/index.html
+++ b/quiz/index.html
@@ -51,15 +51,25 @@
     <meta property="og:image:width" content="1800" />
     <meta property="og:image:height" content="900" />
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="../favicon-16x16.png"
+      sizes="16x16"
+    />
     <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom fonts for this template -->
-    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
+    <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
     <link
-      href="/vendor/simple-line-icons/css/simple-line-icons.css"
+      href="../vendor/simple-line-icons/css/simple-line-icons.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -69,13 +79,13 @@
       type="text/css"
     />
     <link
-      href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
+      href="..//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
       rel="stylesheet"
       type="text/css"
     />
 
     <!-- Custom styles for this template -->
-    <link href="/css/landing-page.min.css" rel="stylesheet" />
+    <link href="../css/landing-page.min.css" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -96,10 +106,10 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light static-top" style="background: #31313B;">
       <div class="container">
-        <a class="navbar-brand" href="/"
+        <a class="navbar-brand" href="../"
           ><img
             class="logo"
-            src="/img/chivote-logo.png"
+            src="../img/chivote-logo.png"
             alt="Chi.vote"
             style="height: 50px"
         /></a>
@@ -160,7 +170,7 @@
         <div class="row text-center mb-5">
           <img
             class="logo logo--chivote-coll"
-            src="/img/chivote-collective-logo-white.png"
+            src="../img/chivote-collective-logo-white.png"
             alt="Chi.vote"
           />
           <p>
@@ -177,35 +187,35 @@
         <div class="row collective-logos">
           <a href="https://bettergov.org">
             <img
-              src="/img/BGA-logo-white.png"
+              src="../img/BGA-logo-white.png"
               alt="Better Government Association"
               class="collective-logo"
             />
           </a>
           <a href="https://blockclubchicago.org/">
             <img
-              src="/img/BCC-logo-white.png"
+              src="../img/BCC-logo-white.png"
               alt="Block Club Chicago"
               class="collective-logo"
             />
           </a>
           <a href="https://www.chicagoreporter.com/">
             <img
-              src="/img/chicago_reporter.png"
+              src="../img/chicago_reporter.png"
               alt="The Chicago Reporter"
               class="collective-logo"
             />
           </a>
           <a href="http://thedailyline.net/">
             <img
-              src="/img/TDL-logo-white.png"
+              src="../img/TDL-logo-white.png"
               alt="The Daily Line"
               class="collective-logo"
             />
           </a>
           <a href="https://thetriibe.com/">
             <img
-              src="/img/Triibe - transparent white logo.png"
+              src="../img/Triibe - transparent white logo.png"
               alt="The TRiiBE"
               class="collective-logo"
             />
@@ -215,7 +225,7 @@
     </section>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
