--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </div>
                 <h3>FAQ</h3>
                 <p class="lead mb-0">
-                  This theme will look great on any device, no matter the size!
+                  Breaking down the basics of voting in Chicago.
                 </p>
               </div>
             </a>
@@ -210,7 +210,7 @@
                 </div>
                 <h3>Ask us anything</h3>
                 <p class="lead mb-0">
-                  Featuring the latest build of the new Bootstrap 4 framework!
+                  Taking reader questions and tracking down the answers.
                 </p>
               </div>
             </a>
@@ -223,8 +223,7 @@
                 </div>
                 <h3>Test your knowledge</h3>
                 <p class="lead mb-0">
-                  Ready to use with your own content, or customize the source
-                  files!
+                  10 questions to assess your readiness to vote this February.
                 </p>
               </div>
             </a>
