Adjust quiz language + icon color

--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                 <div class="features-icons-icon d-flex">
                   <i class="icon-check m-auto text-primary"></i>
                 </div>
-                <h3>Test your knowledge</h3>
+                <h3>Take our quiz</h3>
                 <p class="lead mb-0">
-                  10 questions to assess your readiness to vote this February.
+                  Ready to vote? These 10 questions will help you find out.
                 </p>
               </div>
             </a>
