move tagline down to email

--- a/index.html
+++ b/index.html
@@ -115,11 +115,6 @@
             <h3 class="mb-5 intro-blurb">
               A one-stop-shop for the Chicago election.
             </h3>
-            <h4 class="intro-blurb">
-              No matter if you’re a rookie voter or a veteran, we’ll have
-              everything you need: tools to find your ward, breakdowns on
-              candidates and races, links to news and more.
-            </h4>
           </div>
         </div>
         <div class="row features-icons">
@@ -168,6 +163,11 @@
 
     <section class="bg-light text-center py-5">
       <div class="container">
+        <h4 class="intro-blurb mb-4">
+          No matter if you’re a rookie voter or a veteran, we’ll have everything
+          you need: tools to find your ward, breakdowns on candidates and races,
+          links to news and more.
+        </h4>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <!-- <form> -->
           <div class="form-row">
