--- a/quiz/index.html
+++ b/quiz/index.html
@@ -183,10 +183,7 @@
                 novalidate
               >
                 <!-- <label for="mce-EMAIL">Get Updates</label> -->
-                <p>
-                  Sign up to be notified when we publish new content and
-                  features to Chi.vote.
-                </p>
+                <p>Sign up to be notified as we update Chi.vote.</p>
                 <div id="mc_embed_signup_scroll" class="form-row">
                   <div class="col-12 col-md-9 mb-2 mb-md-0">
                     <input
