--- a/ask/index.html
+++ b/ask/index.html
@@ -77,7 +77,7 @@
     />
 
     <!-- Custom styles for this template -->
-    <link href="../css/landing-page.min.css" rel="stylesheet" />
+    <link href="../css/landing-page.min.css?v=20190123" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
